test_programs/compile_failure/noirc_frontend_tests_references_cannot_mutate_immutable_variable/src/main.nr

    fn main() {
        let array = [1];
        mutate(&mut array);
    }

    fn mutate(_: &mut [Field; 1]) {}
    